# drakkar-vfx

./: .gitignore  .rules  Cargo.toml  LICENSE  README.md  build.rs  general.rules  gpui.rules  layout.rules
.cargo/: config.toml
.github/DISCUSSION_TEMPLATE/: issue-triage.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: rust.yml
assets/: default.hanabi.ron
examples/: 01_bolt_2d.hanabi.ron  02_fire.hanabi.ron  04_sparks_fire_2d.hanabi.ron  05_sparks_magic_2d.hanabi.ron  07_loot_aura_circle_2d.hanabi.ron  09_error.hanabi.ron
src/: lib.rs
src/gui/: app.rs  app_status_bar.rs  blocks.rs  client.rs  mod.rs  scm.rs  section.rs  server_adapter.rs  server_wrapper.rs
src/gui/asset_editor/: editor.rs  error_panel.rs  events.rs  mod.rs
src/gui/expr/: mod.rs  tests.rs  tokenizer.rs  xexpr.rs  xop.rs  xparser.rs  xval.rs
src/gui/facets/: boolean.rs  color.rs  enumeration.rs  events.rs  expr.rs  float.rs  force_field.rs  init_modifier.rs  integer.rs  key_value.rs  mod.rs  render_modifier.rs  slider.rs  spawner.rs  text.rs  time_color.rs  time_vec2.rs  update_modifier.rs
src/gui/file_browser/: bottom_status_bar.rs  browser.rs  events.rs  item.rs  mod.rs  status_bar.rs
src/gui/inspectors/: boolean.rs  color.rs  enumeration.rs  events.rs  expr.rs  float.rs  force_field.rs  init_modifier.rs  integer.rs  key_value.rs  mod.rs  render_modifier.rs  slider.rs  spawner.rs  text.rs  time_color.rs  time_vec2.rs  update_modifier.rs
src/gui/models/: attr.rs  color.rs  key_value.rs  mod.rs  modifier.rs  state.rs
src/gui/primitives/: button.rs  checkbox_input.rs  color_picker_input.rs  dropdown_input.rs  dropdown_menu.rs  events.rs  expr_highlighter.rs  expr_input.rs  increment_buttons.rs  mod.rs  slider.rs  text_input.rs  vec2_input.rs  vec3_input.rs
src/gui/styling/: colors.rs  fonts.rs  icons.rs  mod.rs
src/gui/utils/: asset_source.rs  fs.rs  mod.rs  scm.rs  text.rs
src/shared/: mod.rs  proto.rs
src/viewer/: app.rs  mod.rs  server.rs
vfx/: 03_fire_vortex_2d.hanabi.ron  06_fire_ring_2d.hanabi.ron  08_aura_2d.hanabi.ron
